fix: make person modals wider, truncate long other links

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -410,13 +410,6 @@ a:hover {
   padding: 0.25rem 1rem;
   font-weight: bold;
 }
-/*Entity tables*/
-.entity-table {
-  min-width: 300px;
-}
-.entity-table a {
-  word-break: break-all;
-}
 /* Dropdown styling */
 .dropdown-menu {
   background-color: #f8f3ec;
